apps/comvita-mysupply-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comvita-mysupply-v2
  labels:
    app: comvita-mysupply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comvita-mysupply
  template:
    metadata:
      labels:
        app: comvita-mysupply
        version: v2
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: comvita-mysupply
        image: intcoredevacr.azurecr.io/comvita-supply:9504
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
