apps/mysupply-adyen-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comvita-supply-adyen
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                    # 1
  http:
  - match:
    - uri:
        prefix: /adyen
    route:
    - destination:
        host: comvita-mysupply-adyen.frontend-ns.svc.cluster.local
        port:
          number: 80
